soluction endpoint tags